# FilmHub

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  README.md  firebase.json  firestore.rules  requirements.txt  storage.rules
.claude/: settings.json
.claude/rules/: feedback.json
.claude/skills/clean-folder/: SKILL.md
api/: CLAUDE.md  Dockerfile  package-lock.json  package.json
api/src/: index.ts
api/src/middleware/: auth.ts
filmhub/: convert_transcript.py  cut_video.py  detect_graphics.py  detect_music.py  diarize.py  export_resolve.py  transcribe.py  utils.py
frontend/: .env.production  CLAUDE.md  index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css
modal/: CLAUDE.md  app.py  requirements.txt
modal/gweebler_modal/: __init__.py  cut_video.py  detect_graphics.py  detect_music.py  transcode.py  transcribe.py
reviewer/: Cargo.toml
reviewer/frontend/: index.html  package-lock.json  vite.config.ts
reviewer/frontend/src/: App.tsx  api.ts  index.css  types.ts
reviewer/frontend/src/components/: ActionBar.tsx  SegmentList.tsx  SegmentProperties.tsx  Timeline.tsx  TranscriptPanel.tsx  VideoPlayer.tsx
reviewer/frontend/src/hooks/: useAnalysis.ts  useHandleDrag.ts  useSegments.ts  useVideoSync.ts
reviewer/frontend/src/utils/: formatTime.ts
reviewer/src/: main.rs  state.rs  video_stream.rs
reviewer/src/routes/: analysis.rs  cut.rs  mod.rs  segments.rs  videos.rs
worker/: CLAUDE.md  Dockerfile  package-lock.json  package.json
worker/src/: agent.ts  firestore.ts  gcs.ts  index.ts  modal-client.ts  pipeline.ts  prompts.ts
(+42 files in other folders)
